--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "sass": "^1.55.0",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-html-purgecss": "^0.1.1"
   }
 }
